# vnpy_webtrader

./: .flake8  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  test.ipynb  tradeServer.py  tradestart.py  webServerLite.py  webstart.py
.github/workflows/: pythonapp.yml
script/: no_ui.py  pathtest.py  run.py  test.ipynb  testapi.py
static/: CTP_connect.json  index.html
vnpy_webtrader/: CTP_connect.json  Web_setting.json  __init__.py  engine.py  tradeServer.py  web.py  webServer.py
vnpy_webtrader/app/: __init__.py
vnpy_webtrader/script/: run.py
vnpy_webtrader/static/: index.html
vnpy_webtrader/ua/: __init__.py  ui.py  widget.py
vnpy_webtrader/ui/: __init__.py  widget.py
